specs-dev/fission-deployment-config.yaml
# This file is generated by the 'fission spec init' command.
# See the README in this directory for background and usage information.
# Do not edit the UID below: that will break 'fission spec apply'
apiVersion: fission.io/v1
kind: DeploymentConfig
name: watch-list-exists
uid: 44d9877a-6bd3-471e-954c-854a03f3c89f
