specs-dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fn-watch-list-exists
  namespace: fission
spec:
  hosts:
    - dev.api.siga.me
  gateways:
    - develop/dev-istio-gateway
  http:
  - match:
    - uri:
        prefix: /router/watch_list/exists
    rewrite:
      uri: /watch_list/exists
    route:
    - destination:
        host: router.fission.svc.cluster.local
        port:
          number: 80
